--- a/app/routes/resume.css
+++ b/app/routes/resume.css
@@ -1,5 +1,25 @@
-@media not print {
+
+
+/* @media not print { */
     .show-in-print {
         display: none;
+    }
+/* } */
+
+@media print {
+    a {
+        color: inherit;
+    }
+    
+    a:not(.dont-append-link)::after {
+        content: "(" attr(href) ")";
+        
+        /* 
+            Hide the underline. doesn't work without display (https://stackoverflow.com/a/15688237)
+            then couldn't insert a space, thus padding
+        */
+        text-decoration: none;
+        display: inline-block;
+        padding-left: 1ch;
     }
 }
