--- a/app/routes/resume.css
+++ b/app/routes/resume.css
@@ -1,10 +1,6 @@
-
-
-/* @media not print { */
-    .show-in-print {
-        display: none;
-    }
-/* } */
+.project {
+    margin-top: 1em;
+}
 
 @media print {
     a {
@@ -20,6 +16,10 @@
         */
         text-decoration: none;
         display: inline-block;
-        padding-left: 1ch;
+        padding-left: 0.5ch;
+    }
+    
+    .page-break {
+        break-before: page;
     }
 }
