--- a/app/global.css
+++ b/app/global.css
@@ -2,6 +2,13 @@
   outline: none;
 }
 
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   font-family: sans-serif;
 }
