--- a/styles/global.css
+++ b/styles/global.css
@@ -5,10 +5,13 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
 body {
   font-family: sans-serif;
+  margin: 0;
 }
